# opencred-dc-api

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: cd.yml  ci.yml
core/: Cargo.toml
core/src/: annex_c.rs  annex_d.rs  client.rs  config.rs  lib.rs  request.rs  response.rs  rng.rs  session.rs  types.rs  x509_client.rs
npm-package/: .gitignore  .npmignore  README.md  RELEASE.md  build-wasm.sh  jest.config.js  package-lock.json  package.json  tsconfig.json
npm-package/src/: dc_api_wasm.d.ts  dc_api_wasm.js  dc_api_wasm_bg.wasm.d.ts
wasm/: Cargo.toml
wasm/.cargo/: config.toml
wasm/src/: lib.rs  session_store.rs  signer.rs
wasm/src/sessions/: dc_api.rs  mod.rs  oid4vp.rs
