[package]
name = "dc-api-core"
description = "Digital Credential API"
version = "0.1.0"
edition = "2024"

[dependencies]
# openid4vp = { git = "https://github.com/spruceid/openid4vp", rev = "5a3d7a1" }
openid4vp = { path = "../../openid4vp" }
isomdl = { git = "https://github.com/spruceid/isomdl", rev = "0e53d21" }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.10.0", features = ["serde"] }
