[package]
name = "dc-api-core"
description = "Digital Credential API"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
base64 = "0.22.1"
ciborium = "0.2.2"
coset = "0.3.8"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
http = "1"
openid4vp = { git = "https://github.com/spruceid/openid4vp", rev = "8d7ccc5", features = ["pkcs8"] }
openid4vp-frontend = { git = "https://github.com/spruceid/openid4vp", rev = "8d7ccc5" }
isomdl = { git = "https://github.com/spruceid/isomdl", rev = "0e53d21" }
serde = { version = "=1.0.219", features = ["derive"] }
hpke = { version = "0.13.0", default-features = false, features = ["alloc", "p256"] }
pkcs8 = "0.10.2"
p256 = { version = "0.13.2", features = [ "jwk", "pem" ] }
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10.9"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.10.0", features = ["serde"] }
x509-cert = { version = "0.2.4", features = ["builder", "hazmat"] }
tracing = "0.1.41"
