[package]
name = "dc-api-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
openid4vp = { git = "https://github.com/spruceid/openid4vp", rev = "5a3d7a1" }
isomdl = { git = "https://github.com/spruceid/isomdl", rev = "0e53d21" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.50"
getrandom = { version = "0.3.3", features = ["wasm_js"] }

# [patch."https://github.com/spruceid/openid4vp"]
# openid4vp = { path = "../../openid4vp" }

# [patch."https://github.com/spruceid/isomdl"]
# isomdl = { path = "../../isomdl" }
