[package]
name = "dc-api-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
dc-api-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.50"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = ["console"] }
async-trait = "0.1.89"

# [patch."https://github.com/spruceid/openid4vp"]
# openid4vp = { path = "../../openid4vp" }

# [patch."https://github.com/spruceid/isomdl"]
# isomdl = { path = "../../isomdl" }
