[package]
name = "dc-api-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
dc-api-core = { path = "../core" }
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
async-trait = "0.1.89"
time = { version = "=0.3.36", features = ["wasm-bindgen"] }
getrandom = { version = "0.3.3", features = ["wasm_js"] }
anyhow = "1.0.99"
uuid = "1.18.1"
